--- a/client/index.html
+++ b/client/index.html
@@ -38,11 +38,12 @@
       <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
       <script src="bower_components/angular-route/release/angular-route.js"></script>
     <!-- endbuild -->
-
         <!-- build:js({.tmp,client}) app/app.js -->
-        <script src="app/app.js"></script>
+        <script src="js/app.js"></script>
           <!-- injector:js -->
           <!-- endinjector -->
         <!-- endbuild -->
+    <app-menu></app-menu>
+    <app-lists></app-lists>
 </body>
 </html>
