--- a/client/index.html
+++ b/client/index.html
@@ -1,8 +1,4 @@
-<!doctype html>
-<!--[if lt IE 7]>      <html class="no-js lt-ie9 lt-ie8 lt-ie7"> <![endif]-->
-<!--[if IE 7]>         <html class="no-js lt-ie9 lt-ie8"> <![endif]-->
-<!--[if IE 8]>         <html class="no-js lt-ie9"> <![endif]-->
-<!--[if gt IE 8]><!--> <html class="no-js"> <!--<![endif]-->
+<html>
   <head>
     <meta charset="utf-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
@@ -16,7 +12,7 @@
       <!-- endbower -->
     <!-- endbuild -->
     <!-- build:css({.tmp,client}) app/app.css -->
-    <link rel="stylesheet" href="app/app.css">
+    <link rel="stylesheet" href="css/app.css">
       <!-- injector:css -->
       <!-- endinjector -->
     <!-- endbuild -->
@@ -32,18 +28,20 @@
     <![endif]-->
     <!-- build:js({client,node_modules}) app/vendor.js -->
       <!-- bower:js -->
-      <script src="bower_components/jquery/dist/jquery.js"></script>
-      <script src="bower_components/angular/angular.js"></script>
-      <script src="bower_components/angular-resource/angular-resource.js"></script>
-      <script src="bower_components/bootstrap/dist/js/bootstrap.js"></script>
-      <script src="bower_components/angular-route/release/angular-route.js"></script>
+      <script src="jquery/dist/jquery.js"></script>
+      <script src="angular/angular.js"></script>
+      <script src="angular-resource/angular-resource.js"></script>
+      <script src="angular-route/angular-route.js"></script>
+      <script src="bootstrap/dist/js/bootstrap.js"></script>
+      <script src="angular-route/release/angular-route.js"></script>
     <!-- endbuild -->
         <!-- build:js({.tmp,client}) app/app.js -->
         <script src="js/app.js"></script>
+        <script src="js/appRoutes.js"></script>
           <!-- injector:js -->
           <!-- endinjector -->
         <!-- endbuild -->
     <app-menu></app-menu>
-    <app-lists></app-lists>
+    <ng-view></ng-view>
 </body>
 </html>
